# abstract-robot-dynamics

./: .gitignore  .travis.yml  AUTHORS  CMakeLists.txt  ChangeLog  INSTALL  Makefile.am  Makefile.in  NEWS  README.md  abstract-robot-dynamics.pc.cmake  abstractRobotDynamics.pc.cmake  abstractRobotDynamics.pc.in  aclocal.m4  configure  configure.ac  index.html
.travis/: build
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
debian/: changelog  control  copyright  libabstract-robot-dynamics-dev.install  libabstract-robot-dynamics-doc.doc-base  libabstract-robot-dynamics-doc.install  rules
doc/: Doxyfile.extra.in
doc/additionalDoc/: commands.hh  developer.hh  robotDynamics.hh
doc/pictures/: foot.fig
documentation/: CMakeLists.txt  Makefile.am  Makefile.in  footer.html  header.html  hpp.css  hpp.dox  package.dox.cmake  robotDynamics.dox.in
documentation/additionalDoc/: commands.h  developer.h  robotDynamics.h
documentation/additionalHeaders/: main.h
documentation/pictures/: foot.fig  interface.fig  joint.fig
doxygen/1.17.1/: a00004.html  a00005.html  a00008.html  a00012.html  a00017.html  a00025.html  a00031.map  a00032.md5  a00033.md5  a00034.md5  a00035.md5  a00036.map  a00039.md5  a00045.md5  a00046.md5  a00051.html  a00055.map  a00056.html  a00057.html  a00060.html  a00061.map  a00062.md5  a00064.map  a00067.md5  a00068.map  a00068.md5  functions_func.html  hierarchy.html  main.html  pages.html
doxygen/1.17.1/search/: all_62.html  all_68.html  all_6d.html  files_61.html  functions_61.html  functions_64.html  functions_6c.html  functions_75.html  search.js
doxygen/1.18.0/: a00002.html  a00003.html  a00004.html  a00005.html  a00006.html  a00007.html  a00008.html  a00009.html  a00010.html  a00011.html  a00012.html  a00013.html  a00014.html  a00016.html  a00017.html  a00018.html  a00019.html  a00020.html  a00021.html  a00023.html  a00024.html  a00025.html  a00026.html  a00027.html  a00029.map  a00029.md5  a00032.map  a00032.md5  a00033.md5  a00034.map  a00034.md5  a00035.map  a00035.md5  a00036.md5  a00037.map  a00037.md5  a00038.map  a00038.md5  a00039.md5  a00040.map  (+53 more)
doxygen/1.18.0/search/: all_5f.html  all_61.html  all_63.html  all_64.html  all_65.html  all_66.html  all_69.html  all_6a.html  all_6c.html  all_6d.html  all_6e.html  all_6f.html  all_70.html  all_72.html  all_73.html  all_74.html  all_75.html  all_76.html  all_77.html  all_7e.html  classes_63.html  classes_6d.html  classes_76.html  enums_64.html  files_61.html  files_62.html  (+50 more)
doxygen/HEAD/: a00001.html  a00002.html  a00003.html  a00004.html  a00004.js  a00005.html  a00005.js  a00006.html  a00006.js  a00007.html  a00007.js  a00008.html  a00008.js  a00009.html  a00009.js  a00010.html  a00010.js  a00011.html  a00011.js  a00012.html  a00012.js  a00013.html  a00014.html  a00015.html  a00016.html  a00017.html  a00018.html  a00019.html  a00020.html  a00021.html  a00022.html  a00023.html  a00024.html  a00025.html  a00026.html  a00027.html  a00028.map  a00029.md5  a00030.html  a00031.html  (+161 more)
doxygen/v1.17.1/: a00006.html  a00007.html  a00009.html  a00013.html  a00018.html  a00019.html  a00020.html  a00023.html  a00028.md5  a00030.md5  a00032.map  a00037.map  a00037.md5  a00038.md5  a00039.map  a00040.md5  a00042.map  a00042.md5  a00047.map  a00050.md5  a00055.md5  a00058.html  a00061.md5  a00063.map  a00066.map  a00066.md5  formula.repository  installdox.fixed
implementation/MatrixAbstractLayer/: INSTALL  Makefile.am  Makefile.in  MatrixAbstractLayer.pc.in  NEWS  configure  configure.ac
implementation/MatrixAbstractLayer/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
implementation/MatrixAbstractLayer/doc/: Makefile.am  Makefile.in  footer.html  header.html  package.dox.in
implementation/MatrixAbstractLayer/doc/additionalDoc/: package.h
implementation/MatrixAbstractLayer/doc/pictures/: footer.txt
implementation/MatrixAbstractLayer/include/MatrixAbstractLayer/: Makefile.am  Makefile.in  MatrixAbstractLayer.h  configMAL.h
implementation/MatrixAbstractLayer/unitTesting/: Makefile  Makefile.am  Makefile.in  MatrixAbstractLayerTest.cpp  MatrixAbstractLayerTest.h  main.cpp
implementation/jrlCIRdynamicsJRLJapan/: INSTALL  Makefile.am  Makefile.in  NEWS  configure  configure.ac  jrlCIRdynamicsJRLJapan.pc.in
implementation/jrlCIRdynamicsJRLJapan/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
implementation/jrlCIRdynamicsJRLJapan/doc/: Makefile.am  Makefile.in  footer.html  header.html  package.dox.in
implementation/jrlCIRdynamicsJRLJapan/doc/additionalDoc/: package.h
implementation/jrlCIRdynamicsJRLJapan/doc/pictures/: footer.txt
implementation/jrlCIRdynamicsJRLJapan/include/jrlCIRdynamicsJRLJapan/: Body.h  DynamicBody.h  DynamicMultiBody.h  HumanoidDynamicMultiBody.h  HumanoidSpecificities.h  Joint.h  Makefile.am  Makefile.in  MultiBody.h  fileReader.h  jrlCIRdynamicsJRLJapan.h
implementation/jrlCIRdynamicsJRLJapan/src/: Body.cpp  DynamicBody.cpp  DynamicMultiBody.cpp  HumanoidDynamicMultiBody.cpp  HumanoidSpecificities.cpp  Joint.cpp  Makefile.am  Makefile.in  MultiBody.cpp  fileReader.cpp  jrlCIRdynamicsJRLJapan.cpp
implementation/jrlCIRdynamicsJRLJapan/unitTesting/: Makefile.am  Makefile.in  TestHumanoidDynamicRobot.cpp  jrlCIRdynamicsJRLJapanTest.cpp  jrlCIRdynamicsJRLJapanTest.h  main.cpp
include/abstract-robot-dynamics/: abstract-robot-dynamics.hh  body.hh  dynamic-robot.hh  foot.hh  fwd.hh  hand.hh  humanoid-dynamic-robot.hh  io.hh  joint.hh  rigid-acceleration.hh  rigid-velocity.hh  robot-dynamics-object-constructor.hh
interfaces/: CMakeLists.txt  Makefile.am  Makefile.in  deprecated.h  jrl3dStraightLine.h  jrlBody.h  jrlDynamicRobot.h  jrlDynamicRobotNA.hpp  jrlFoot.h  jrlHand.h  jrlHumDynRobotType2.h  jrlHumanoidDynamicRobot.h  jrlHumanoidDynamicRobotNA.hpp  jrlJoint.h  jrlRigidAcceleration.h  jrlRigidVelocity.h  jrlRobotDynamicsObjectConstructor.h  jrldynamicrobot.hh  jrlfoot.hh  jrlhand.hh  jrlhumanoiddynamicrobot.hh  jrljoint.hh  jrlrobotdynamicsobjectconstructor.hh
tests/: CMakeLists.txt  common.hh  simple.cc
(+142 files in other folders)
