dnl autoconf script for abstract interface robot dynamics
dnl
dnl Research carried out within the scope of the Associated International
dnl Laboratory: Joint Japanese-French Robotics Laboratory (JRL)
dnl
dnl   Author: Florent Lamiraux LAAS-CNRS
dnl

AC_INIT([abstractRobotDynamics],[1.9.99],[openrobots@laas.fr])
AC_PREREQ(2.59)

AM_INIT_AUTOMAKE([foreign no-define])
AC_PROG_INSTALL

AC_OUTPUT(Makefile
	interfaces/Makefile
	documentation/Makefile
	documentation/robotDynamics.dox
	abstractRobotDynamics.pc
)
