# Research carried out within the scope of the Associated
# International Laboratory: Joint Japanese-French Robotics Laboratory
# (JRL)
#
# Author: Florent Lamiraux
#

robotDynamicsdir = $(includedir)/robotDynamics
robotDynamics_HEADERS = \
	jrlBody.h \
	jrlDynamicRobot.h \
	jrlHumanoidDynamicRobot.h \
	jrlJoint.h \
	jrlRigidAcceleration.h \
	jrlRigidVelocity.h \
	jrlRobotDynamicsObjectConstructor.h 
