
dnl 
dnl configure.ac file for package MatrixAbstractLayer 
dnl

AC_INIT([MatrixAbstractLayer], [1.0], [olivier.stasse@aist.go.jp])
AC_PREREQ(2.59)

AM_INIT_AUTOMAKE

AC_PROG_CXX
AC_PROG_INSTALL
AC_PROG_LIBTOOL

AC_OUTPUT(
	MatrixAbstractLayer.pc
	Makefile
	include/MatrixAbstractLayer/Makefile
	doc/Makefile
	doc/package.dox
	unitTesting/Makefile
	)
