# 
#  Copyright 
# 

lib_LTLIBRARIES = libjrlCIRdynamicsJRLJapan.la
libjrlCIRdynamicsJRLJapan_la_SOURCES = \
	fileReader.cpp \
	Joint.cpp \
	Body.cpp \
	DynamicBody.cpp \
	MultiBody.cpp \
	DynamicMultiBody.cpp \
	HumanoidDynamicMultiBody.cpp \
	HumanoidSpecificities.cpp 

libjrlCIRdynamicsJRLJapan_la_LDFLAGS = 

libjrlCIRdynamicsJRLJapan_la_CPPFLAGS = \
	-I$(srcdir)/../include/jrlCIRdynamicsJRLJapan/
