# 
#  Copyright 
# 

MatrixAbstractLayerdir = @includedir@/MatrixAbstractLayer
MatrixAbstractLayer_HEADERS = \
	MatrixAbstractLayer.h \
	MatrixAbstractLayerBoost.h \
	MatrixAbstractLayerDoc.h \
	MatrixAbstractLayerSmall.h \
	MatrixAbstractLayerSmallMatrix3x3Default.h \
	MatrixAbstractLayerSmallMatrix4x4Default.h \
	MatrixAbstractLayerSmallVector3Default.h \
	MatrixAbstractLayerSmallVector4Default.h \
	MatrixAbstractLayerVNL.h \
	configMAL.h
	

